@@ -1,4 +1,4 @@
-rev 12-Apr_11-17_01
+rev 12-Apr_11-18_33
 
 8 Sep
 This distribution marks the changeover to a single distribution of fckgLite based on the jQuery branch of fckgLiteSafe.
@@ -146,3 +146,6 @@ Removed extra space from multiple format markup that shows up as blank underline
 
 11 April 2012
 Trapped javascript error thrown by regex used for 10 Apr fix.
+
+Traced error to unescaped javascript dynamically formatted regex string and added escape function
+to RegExp to escape these strings.
